my voice page form issue on mobile fixed.

--- a/docroot/sites/all/themes/ambitious/css/layouts/voice-page.css
+++ b/docroot/sites/all/themes/ambitious/css/layouts/voice-page.css
@@ -768,7 +768,7 @@ body > .jcf-select-drop.jcf-drop-flipped {
 */
 /* line 9, ../../sass/layouts/voice-page.scss */
 .my-voice-home .banner_text {
-  background-image: url('../../images/my-voice-large-logo.png?1431947182');
+  background-image: url('../../images/my-voice-large-logo.png?1433921678');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 75%;
@@ -786,7 +786,7 @@ body > .jcf-select-drop.jcf-drop-flipped {
 @media (max-width: 767px) {
   /* line 25, ../../sass/layouts/voice-page.scss */
   .page-node-74596 #content_top, .section-my-voice #content_top, .my-voice-home #content_top {
-    margin-top: -5%;
+    margin-top: -15.5%;
   }
 }
 /* line 34, ../../sass/layouts/voice-page.scss */
@@ -836,7 +836,7 @@ body > .jcf-select-drop.jcf-drop-flipped {
     width: 49%;
     padding-top: 9px;
     /* &:hover{
-    	border-bottom-width: 3px;
+      border-bottom-width: 3px;
     } */
   }
 }
@@ -1019,63 +1019,69 @@ nav .main-menu-2 li a .icon-Uparrow {
   padding-top: 45px;
   padding-bottom: 49px;
 }
-
-/* line 215, ../../sass/layouts/voice-page.scss */
-.page-node-74596 #wrapper {
-  background-image: url('../../images/wid_bg.jpg?1431947182');
+@media (max-width: 767px) {
+  /* line 209, ../../sass/layouts/voice-page.scss */
+  .my-voice-columns {
+    padding-top: 0;
+  }
 }
+
 /* line 218, ../../sass/layouts/voice-page.scss */
+.page-node-74596 #wrapper {
+  background-image: url('../../images/wid_bg.jpg?1433921678');
+}
+/* line 221, ../../sass/layouts/voice-page.scss */
 .page-node-74596 .form-text {
   color: #000000;
 }
-/* line 223, ../../sass/layouts/voice-page.scss */
+/* line 226, ../../sass/layouts/voice-page.scss */
 .page-node-74596 #content-header h1:nth-child(1) {
   display: none;
 }
 
-/* line 230, ../../sass/layouts/voice-page.scss */
+/* line 233, ../../sass/layouts/voice-page.scss */
 .my-voice-intro-menu {
   padding-top: 20px;
 }
 
-/* line 236, ../../sass/layouts/voice-page.scss */
+/* line 239, ../../sass/layouts/voice-page.scss */
 .section-voices-spectrum input[type=submit] {
   border-color: #b3066b;
   background: #e30087;
 }
-/* line 240, ../../sass/layouts/voice-page.scss */
+/* line 243, ../../sass/layouts/voice-page.scss */
 .section-voices-spectrum .filter-slide .nav-filter .form-type-bef-checkbox.checked,
 .section-voices-spectrum .filter-slide .nav-filter .form-type-bef-checkbox:hover {
   color: #e30087;
 }
-/* line 244, ../../sass/layouts/voice-page.scss */
+/* line 247, ../../sass/layouts/voice-page.scss */
 .section-voices-spectrum input[type=submit]:focus {
   color: #ffffff;
 }
 
-/* line 252, ../../sass/layouts/voice-page.scss */
+/* line 255, ../../sass/layouts/voice-page.scss */
 .section-myvoice .top-bar .logo, .node-type-my-voice-blog .top-bar .logo {
   display: inline;
   float: left;
 }
 @media (max-width: 767px) {
-  /* line 252, ../../sass/layouts/voice-page.scss */
+  /* line 255, ../../sass/layouts/voice-page.scss */
   .section-myvoice .top-bar .logo, .node-type-my-voice-blog .top-bar .logo {
     display: none;
   }
 }
 
-/* line 264, ../../sass/layouts/voice-page.scss */
+/* line 267, ../../sass/layouts/voice-page.scss */
 .form-text, .form-textarea {
   color: #2a2e31;
 }
 
-/* line 270, ../../sass/layouts/voice-page.scss */
+/* line 273, ../../sass/layouts/voice-page.scss */
 .view-content .navigation-block {
-  background-image: url('../../images/aged-16-25.jpg?1431947182');
+  background-image: url('../../images/aged-16-25.jpg?1433921678');
   background-size: cover;
 }
-/* line 273, ../../sass/layouts/voice-page.scss */
+/* line 276, ../../sass/layouts/voice-page.scss */
 .view-content .navigation-block:before {
   content: "";
   width: 0;
@@ -1088,11 +1094,11 @@ nav .main-menu-2 li a .icon-Uparrow {
   left: 0;
   z-index: 1;
 }
-/* line 286, ../../sass/layouts/voice-page.scss */
+/* line 289, ../../sass/layouts/voice-page.scss */
 .view-content .navigation-block:hover:before {
   border-color: transparent transparent transparent #C80042;
 }
-/* line 290, ../../sass/layouts/voice-page.scss */
+/* line 293, ../../sass/layouts/voice-page.scss */
 .view-content .navigation-block .wrapper {
   background: #e30087;
   opacity: 0.5;
@@ -1105,11 +1111,11 @@ nav .main-menu-2 li a .icon-Uparrow {
   margin-top: -1em;
   margin-left: -1em;
 }
-/* line 302, ../../sass/layouts/voice-page.scss */
+/* line 305, ../../sass/layouts/voice-page.scss */
 .view-content .navigation-block .wrapper:hover {
   background: #CF005B;
 }
-/* line 306, ../../sass/layouts/voice-page.scss */
+/* line 309, ../../sass/layouts/voice-page.scss */
 .view-content .navigation-block p a {
   color: #ffffff;
   font-size: 37px;
@@ -1121,23 +1127,23 @@ nav .main-menu-2 li a .icon-Uparrow {
   margin-left: 15%;
 }
 @media (max-width: 767px) {
-  /* line 306, ../../sass/layouts/voice-page.scss */
+  /* line 309, ../../sass/layouts/voice-page.scss */
   .view-content .navigation-block p a {
     font-size: 30px;
   }
 }
-/* line 322, ../../sass/layouts/voice-page.scss */
-.view-content .age-post {
-  background-image: url('../../images/my-voice.jpg?1431947182');
-}
 /* line 325, ../../sass/layouts/voice-page.scss */
+.view-content .age-post {
+  background-image: url('../../images/my-voice.jpg?1433921678');
+}
+/* line 328, ../../sass/layouts/voice-page.scss */
 .view-content .card-transparent {
   background: none;
   -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
 }
 @media (max-width: 767px) {
-  /* line 325, ../../sass/layouts/voice-page.scss */
+  /* line 328, ../../sass/layouts/voice-page.scss */
   .view-content .card-transparent {
     background: #ffffff;
   }
