--- a/docroot/sites/all/themes/ambitious/sass/content.scss
+++ b/docroot/sites/all/themes/ambitious/sass/content.scss
@@ -913,11 +913,13 @@
         float:left;
         clear:both;
         width:80%;
+        @include breakpoint($mobile) {
+            width: 100%;
+        }
         border-radius:5px;
         border-color:$mercury;
         @include box-shadow(inset 1px 1px 2px rgba(112, 112, 112, 1));
-        margin-bottom: 20px;
-
+        margin-bottom:20px;
     }
 
 }
