--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic.scss
@@ -1543,10 +1543,9 @@ fieldset{
     @include breakpoint($mobile){
       padding: 0 15px;
       //margin-left: 15px;
-      //width:94%;
-      
+      //width:94%;      
       .block-close{
-        margin-left: -37px;
+        margin-left:-38px;
         width:53px;
       }
     }
